--- a/moby_dick.html
+++ b/moby_dick.html
@@ -23,6 +23,17 @@
       <a
       href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank"> <img src="images/moby_dick.png" alt="Moby Dick">
       </a>
+      <p>
+        <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank"><em>Moby-Dick</em></a> by Herman Melville begins with these imortal words:
+      </p>
+      <blockquote>
+        <p>
+          <span>Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my perse, and nothing particular to interest me on shore, I thought I would sail about a little and sed the watery part of the world. It is a way I have of driving off the spleen and regulating circulation.
+        </p>
+      </blockquote>
+        <p>
+          After Driving off his spleen (which <em>can't</em> be good for you), Ishmael then goes on in much the same vein for approximately on jillion pages. The only thing bigger than Moby Dick (who-<em>spoiler alert!</em>-is a giant white whale) is the book itself
+        </p>
     </div>
   </body>
 </html>
