add lists to Moby Dick and menu links to all pages

--- a/tags.html
+++ b/tags.html
@@ -5,6 +5,11 @@
     <title>HTML Tags</title>
   </head>
   <body>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
     <h1>Important HTML tags</h1>
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
       <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
@@ -96,6 +101,33 @@
         <td>format as source code</td>
         <td><code>&lt;code&gt;table&lt;/code&gt;</code></td>
         <td><code>table</code></td>
+      </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header</td>
+        <td>define block section for headings</td>
+        <td><code>&lt;header&gt;A Soft Cover Book Report&lt;/header&gt;</code></td>
+        <td>
+          <header>
+            A Soft Cover Book Report
+          </header>
+        </td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>division</td>
+        <td>define a division or section of document</td>
+        <td><code>&lt;div&gt;... a block of text...&lt;/div&gt;</code></td>
+        <td><div>
+          ... a block of text...
+        </div></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>define inline section in document</td>
+        <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
+        <td><span>Call me Ishmael.</span></td>
       </tr>
     </table>
   </body>
